# etl-core

./: .coveragerc  .env_example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  output.txt  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties  test.csv  test_fix.py
.github/ISSUE_TEMPLATE/: feature_etl.md
.github/workflows/: build.yml  ci.yml  eslint.yml  flake8.yml  tests.yml
cli_examples_mongo/: creds_mongo_test.json  job_mongo_test.json  mongo_context_mapping.json
docs/: cli.md  documentation.md  filter_system.md  mariadb_components.md  postgresql_components.md  sql_connection_handler.md
docs/etl_core/: README.md  main.md  singletons.md
examples/: mariadb_usage_example.py
src/: main.py  singletons.py
src/api/: cli.py  dependencies.py  helpers.py  http_errors.py  main.py
src/components/: base.py  base_component.py  base_components.py  column_definition.py  component_registry.py  dataclasses.py  envelopes.py  registry.py  schema.py  schemas.py  stubcomponents.py
src/config/: logging_config.yaml
src/context/: context.py  context_parameter.py  context_provider.py  credentials.py  environment.py  secure_context_adapter.py
src/etl_core/: main.py  singletons.py
src/job_execution/: job.py  job_execution_handler.py  job_information_handler.py  job_status.py  runtimejob.py
src/logger/: logging_setup.py
tests/: async_mongomock.py  config_helpers.py  conftest.py  helpers.py  schema_helpers.py  test_column_definition.py  test_component_metrics.py  test_csv_receiver.py  test_init.py  test_json_components.py
(+569 files in other folders)
